--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -55,11 +55,6 @@ smallButton.organisation.details.title = Organisation Details
 
 rss.title = {0}
 
-hexDigest.missing.title = Item selected was not defined in a jar file
-jar.softwareFmId.missing.title = Please specify the Software Fm Id
-artifact.name.missing.title = Please specify the artifact's name
-artifact.url.missing.title = Please specify the main url for this project
-group.name.missing.title = Please specify the group name
 
 action.edit.tooltip = Edit
 action.edit.name.tooltip = Edit Name
@@ -100,24 +95,31 @@ dialog.experiment.title = Experiment
 javadoc.title = Javadoc
 source.title = Source
 
-description.noneJarFile.text = This was defined in a file that isn't a jar. Software FM manages data about released jars, so it cannot help you with this file
-description.idsNotDefined.text = Software FM needs your help\n\nNo one has yet added data about this jar to Software FM. To do so you need to define three things: the Group Id, the Artifact Id and the Version. \
-Software Fm applies the same meaning that Maven does to these word.
+hexDigest.missing.title = Selected Item is not defined in a jar file
+jar.softwareFmId.missing.title = Please specify the Software Fm Id
+artifact.name.missing.title = Please specify the artifact's name
+artifact.url.missing.title = Please specify the main url for this project
+group.name.missing.title = Please specify the group name
 
+description.noneJarFile.text = The selected item was defined in a file that isn't a jar. Software FM manages data about released jars, so it cannot help you with this file
 
-softwareFm.id.help = This is the three part ID that SoftwareFM uses to identify the jar.\n* The Group Id is an id representing the organisation / person / group that built the software. \
-\n* The Artifact Id is an id representing "this" jar.\
-\n* The Version indicates which version of that jar it is. \nExample: For "spring-core-3.0.5.RELEASE.jar", the Group Id would be org.springframework, \
-the Artifact Id spring-core and the Version 3.0.5.RELEASE
+description.idsNotDefined.text = Software FM needs your help\n\nNo one has yet added data about this jar to Software FM. To do this click the line above "Id: Please specify the Software Fm Id"
+
+softwareFm.id.help = The selected item was defined in a jar. Software Fm uses the digest of that jar to find it's Id. There are three parts to the Software Fm Id, just like Maven.\n\
+* The Group Id is an id representing the organisation / person / group that built the software.\n\
+* The Artifact Id is an id representing "this" jar.\n\
+* The Version indicates which version of that jar it is. \n\n\
+Example: For "spring-core-3.0.5.RELEASE.jar", the Group Id would be org.springframework, the Artifact Id spring-core and the Version 3.0.5.RELEASE
 
 softwareFm.name.help = This is the human readable name of the jar that you clicked on. It will often be the same as the artifact id with spaces added
 
 artifact.url.help = This is main url for the artifact. Often it is the url of the project that created it
 artifact.description.help = This is a description of the artifact
 
-jar.help = This is the name of the jar that the thing you clicked on was defined in
+jar.help = This is the name and path of the jar that the selected item was defined in. You cannot edit anything on this screen, it is just here for information purposes
 
 issues.help = This is the url of the issues database for this artifact
 
-source.help = This is data about where eclipse, and where softwareFm think a jar containing the source code can be found 
+source.help = This is data about where eclipse, and where softwareFm think a jar containing the source code can be found
+ 
 javadoc.help = This is data about where eclipse, and where softwareFm think a jar containing the javadoc, or a url pointing to the javadoc can be found 
