Large changes to the Javadoc Source editor

--- a/org.softwareFm.display/bin/org/softwareFm/display/Test.properties
+++ b/org.softwareFm.display/bin/org/softwareFm/display/Test.properties
@@ -44,3 +44,10 @@ rss.title =  {0}
 
 browser.next.title = Next
 browser.prev.title = Prev
+
+ button.test.title = Test
+button.copyToEclipse.title = >Eclipse
+button.copyToSoftwareFm.title = >SFM
+button.copyToBoth.title = >Both
+ url.javadoc.title = Javadoc Url
+ 
