--- a/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/src/main/resource/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -70,12 +70,13 @@ button.cancel.title = Cancel
 button.verify.title = Verify
 button.copyToSoftwareFm.title = Copy To SoftwareFm
 button.copyToEclipse.title = Copy To Eclipse
+button.copyToBoth.title = >SFM&E
 button.eclipseNotUrl.title = Eclipse has none http value
 button.noData.title = No data in Eclipse or SoftwareFm
 button.matches.title = Eclipse / SoftwareFm match
 button.doesntMatches.title = Eclipse / SoftwareFm have data
 button.javadocSource.tooltip = Eclipse: {0}\nSoftwareFm: {1}
-
+button.test.title = Test
 
 tweet.line.title = Tweet
 facebook.line.title = Facebook
@@ -88,12 +89,15 @@ nameAndEmail.line.title = Name and Email
 job.line.title = Job
 
 
-dialog.eclipseValue.title=Eclipse Value
+dialog.eclipseValue.title=Your Eclipse Value
 dialog.softwareFmValue.title=SoftwareFm Value
-dialog.experiment.title = Experiment
+dialog.url.title = Javadoc Url
 
 javadoc.title = Javadoc
 source.title = Source
+
+url.javadoc.title = Javadoc Url
+url.source.title = Source Url
 
 hexDigest.missing.title = Selected Item is not defined in a jar file
 jar.softwareFmId.missing.title = Please specify the Software Fm Id
