Cleaned up the JavadocSource gui

--- a/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
+++ b/org.softwareFm.configuration/bin/org/softwareFm/configuration/SoftwareFmDisplay.properties
@@ -70,6 +70,7 @@ button.cancel.title = Cancel
 button.verify.title = Verify
 button.copyToSoftwareFm.title = Copy To SoftwareFm
 button.copyToEclipse.title = Copy To Eclipse
+button.copyEclipseToSoftwareFm.title = E=>SM
 button.copyToBoth.title = >SFM&E
 button.eclipseNotUrl.title = Eclipse has none http value
 button.noData.title = No data in Eclipse or SoftwareFm
@@ -77,6 +78,9 @@ button.matches.title = Eclipse / SoftwareFm match
 button.doesntMatches.title = Eclipse / SoftwareFm have data
 button.javadocSource.tooltip = Eclipse: {0}\nSoftwareFm: {1}
 button.test.title = Test
+javadocSource.settingEclipseValue.text = Setting Eclipse Value
+javadocSource.setEclipseValue.text = Set Eclipse Value
+
 
 tweet.line.title = Tweet
 facebook.line.title = Facebook
@@ -88,7 +92,7 @@ nameAndUrl.line.title = Name and Url
 nameAndEmail.line.title = Name and Email
 job.line.title = Job
 
-
+group.reference.title = Reference
 dialog.eclipseValue.title=Your Eclipse Value
 dialog.softwareFmValue.title=SoftwareFm Value
 dialog.url.title = Javadoc Url
