--- a/org.softwareFm.display/src/test/resources/org/softwareFm/display/Test.properties
+++ b/org.softwareFm.display/src/test/resources/org/softwareFm/display/Test.properties
@@ -30,7 +30,7 @@ smallButton.group.twitter.title = Twitter
 smallButton.organisation.details.title = Organisation Details
 smallButton.organisation.twitter.title = Twitter
 
-
+group.reference.title = Reference
 action.edit.tooltip = Edit
 action.browse.tooltip = Browse
 action.add.tooltip = Add
