Spike using tables

--- a/org.softwareFm.card.spike2/.project
+++ b/org.softwareFm.card.spike2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.softwareFm.card</name>
+	<name>org.softwareFm.card.SPIKE2</name>
 	<comment></comment>
 	<projects>
 	</projects>
