Migrating text to resources

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -1,6 +1,11 @@
 navBar.prev.title = Prev
 navBar.next.title = Next
 
+card.name.title = Name
+card.value.title = Value
+card.holder.loading.text = Loading
+detail.factory.loading.text = Loading
+
 keys.hide = jcr:primaryType
 
 #for name 0 is the name 1 is camelCaseToPretty
