Cards now configured from resources

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -1,9 +1,14 @@
 navBar.prev.title = Prev
 navBar.next.title = Next
 
+card.aggregator.tag=jcr:primaryType
 card.name.title = Name
 card.value.title = Value
 card.holder.loading.text = Loading
+
+card.order =name,description,groupId,artifactId,version
+
+
 detail.factory.loading.text = Loading
 
 keys.hide = jcr:primaryType
