Have button and combo in pairs for navbar

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -1,5 +1,5 @@
-navBar.prev.title = Prev
-navBar.next.title = Next
+navBar.prev.title = <
+navBar.next.title = >
 
 card.aggregator.tag=jcr:primaryType
 card.name.title = Name
