--- a/org.softwareFm.card/build.properties
+++ b/org.softwareFm.card/build.properties
@@ -1,4 +1,6 @@
-source.. = src/main/java/
+source.. = src/main/java/,\
+           src/main/resources/,\
+           src/test/java/
 output.. = bin/
 bin.includes = META-INF/,\
                .
