--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -1,7 +1,7 @@
 navBar.prev.title = <
 navBar.next.title = >
 
-card.aggregator.tag=jcr:primaryType
+card.aggregator.tag=sling:resourceType,jcr:primaryType
 card.name.title = Name
 card.value.title = Value
 card.holder.loading.text = Loading
