--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -14,7 +14,31 @@ detail.factory.loading.text = Loading
 keys.hide = jcr:primaryType
 
 #for name 0 is the name 1 is camelCaseToPretty
-#for value 0 is the value 1 is size if it's a list
+#for value 0 is the value 1 is size if it's a list value 2 is 'loading' or the value of the size of the children for things like 'version', 'group', 'mailingList'
 
-nt_unstructured.name = Children
+nt_unstructured.name = Folders
 nt_unstructured.value = {1}
+
+version.name = Versions
+version.value = {1}
+group.name = Groups 
+group.value = {2}
+artifact.name = Artifacts 
+artifact.value = {1}
+softwareFm_group.name = Groups 
+softwareFm_group.value = {1}
+softwareFm_artifact.name = Artifacts 
+softwareFm_artifact.value = {1}
+softwareFm_version.name = Versions 
+softwareFm_version.value = {1}
+
+usedby.name = Used By
+usedby.value = {1}
+softwareFm_usedBy.name =Used By
+softwareFm_usedBy.value = {1}
+dependancy.name = Dependency
+dependancy.value = {1}
+softwareFm_dependancy.name = Dependency
+softwareFm_dependancy.value = {1}
+
+#"version", "artifact", "group", "usedby", "dependency"
