Adding clicking to items on the CardExplorer, and some layout effort

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -6,7 +6,7 @@ card.name.title = Name
 card.value.title = Value
 card.holder.loading.text = Loading
 
-card.order =name,description,groupId,artifactId,version
+card.order =nt:unstructured,name,description,groupId,artifactId,version,group,version,artifact
 
 
 detail.factory.loading.text = Loading
@@ -22,7 +22,7 @@ nt_unstructured.value = {1}
 version.name = Versions
 version.value = {1}
 group.name = Groups 
-group.value = {2}
+group.value = {1}
 artifact.name = Artifacts 
 artifact.value = {1}
 softwareFm_group.name = Groups 
