--- a/org.softwareFm.eclipse/.project
+++ b/org.softwareFm.eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.softwareFm.eclipse.eclipse</name>
+	<name>org.softwareFm.eclipse</name>
 	<comment></comment>
 	<projects>
 	</projects>
