--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -8,6 +8,11 @@ card.holder.loading.text = Loading
 
 card.order =nt:unstructured,name,description,groupId,artifactId,version,group,version,artifact
 
+missing.list=group,artifact,version
+missing.group.list=url
+missing.url.default= Unknown
+
+missing.artifact.list=mailingList,tutorials
 
 detail.factory.loading.text = Loading
 
