Decided need to refactor how the cards store data: back to maps

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -46,4 +46,8 @@ dependancy.value = {1}
 softwareFm_dependancy.name = Dependency
 softwareFm_dependancy.value = {1}
 
+
+button.ok.title = Ok
+button.cancel.title = Cancel
+
 #"version", "artifact", "group", "usedby", "dependency"
