--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -13,6 +13,8 @@ missing.group.list=url
 missing.url.default= Unknown
 
 missing.artifact.list=mailingList,tutorials
+missing.mailingList.default= Unknown
+missing.tutorials.default = Unknown
 
 detail.factory.loading.text = Loading
 
