--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -18,6 +18,7 @@ missing.tutorials.default = Unknown
 
 detail.factory.loading.text = Loading
 
+#comma separated list
 keys.hide = jcr:primaryType
 
 #for name 0 is the name 1 is camelCaseToPretty
@@ -32,21 +33,6 @@ group.name = Groups
 group.value = {1}
 artifact.name = Artifacts 
 artifact.value = {1}
-softwareFm_group.name = Groups 
-softwareFm_group.value = {1}
-softwareFm_artifact.name = Artifacts 
-softwareFm_artifact.value = {1}
-softwareFm_version.name = Versions 
-softwareFm_version.value = {1}
-
-usedby.name = Used By
-usedby.value = {1}
-softwareFm_usedBy.name =Used By
-softwareFm_usedBy.value = {1}
-dependancy.name = Dependency
-dependancy.value = {1}
-softwareFm_dependancy.name = Dependency
-softwareFm_dependancy.value = {1}
 
 
 button.ok.title = Ok
