Prettifying the cards

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -8,6 +8,8 @@ card.holder.loading.text = Loading
 
 card.order =nt:unstructured,name,description,groupId,artifactId,version,group,version,artifact
 
+editor.styledText = description
+
 missing.list=group,artifact,version
 missing.group.list=url
 missing.url.default= Unknown
@@ -27,7 +29,7 @@ keys.hide = jcr:primaryType
 nt_unstructured.name = Folders
 nt_unstructured.value = {1}
 
-version.name = Versions
+version.name = Version	
 version.value = {1}
 group.name = Groups 
 group.value = {1}
@@ -38,4 +40,15 @@ artifact.value = {1}
 button.ok.title = Ok
 button.cancel.title = Cancel
 
-#"version", "artifact", "group", "usedby", "dependency"
+
+title.folder.color=255,255,255
+title.folder.indent=15
+title.group.color=234,245,234
+title.group.indent=20
+title.artifact.color=234,245,234
+title.artifact.indent=25
+title.version.color=234,245,234
+title.version.indent=30
+title.jar.color=234,245,234
+title.jar.indent = 35
+
