Cards now looking pretty, resize and layout well. LH card still needs work

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -14,9 +14,10 @@ missing.list=group,artifact,version
 missing.group.list=url
 missing.url.default= Unknown
 
-missing.artifact.list=mailingList,tutorials
+missing.artifact.list=mailingList,tutorials,tweets
 missing.mailingList.default= Unknown
 missing.tutorials.default = Unknown
+missing.tweets.default = Unknown
 
 detail.factory.loading.text = Loading
 
@@ -43,12 +44,16 @@ button.cancel.title = Cancel
 
 title.folder.color=255,255,255
 title.folder.indent=15
-title.group.color=234,245,234
+
+title.group.color=235,238,235
 title.group.indent=20
-title.artifact.color=234,245,234
+
+title.artifact.color=240,233,235
 title.artifact.indent=25
-title.version.color=234,245,234
+
+title.version.color=235,242,246
 title.version.indent=30
-title.jar.color=234,245,234
+
+title.jar.color=244,239,236
 title.jar.indent = 35
 
