Missing items now understands missing lists and missing strings

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -11,13 +11,11 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version,group,ve
 editor.styledText = description
 
 missing.list=group,artifact,version
-missing.group.list=url
+
+missing.group.string=url
 missing.url.default= Unknown
 
 missing.artifact.list=mailingList,tutorials,tweets
-missing.mailingList.default= Unknown
-missing.tutorials.default = Unknown
-missing.tweets.default = Unknown
 
 detail.factory.loading.text = Loading
 
