--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -28,7 +28,7 @@ missing.unsubscribe.default = Add email address used to unsubscribe
 detail.factory.loading.text = Loading
 
 #comma separated list
-keys.hide = jcr:primaryType
+keys.hide = jcr:primaryType,sling:resourceType
 
 #for name 0 is the name 1 is camelCaseToPretty
 #for value 0 is the value 1 is size if it's a list value 2 is 'loading' or the value of the size of the children for things like 'version', 'group', 'mailingList'
