--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -14,8 +14,11 @@ missing.list=group,artifact,version,mailingList,tutorial
 
 missing.group.string=url
 missing.url.default= Unknown
+missing.name.default = <Please add a name>
+missing.description.default = <Please add a description>
 
 missing.artifact.list=mailingList,tutorial,tweet
+missing.artifact.string=name,description
 missing.mailingList.string=email,subscribe,unsubscribe
 
 missing.tutorial.string=url
