--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -10,16 +10,20 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version,group,ve
 
 editor.styledText = description
 
-missing.list=group,artifact,version,mailingList,tutorial
+missing.list=group,artifact,version,mailingList,tutorial,rss,tweet
 
 missing.group.string=url
 missing.url.default= Unknown
 missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
 
-missing.artifact.list=mailingList,tutorial,tweet
+missing.artifact.list=mailingList,tutorial,tweet,rss
 missing.artifact.string=name,description
 missing.mailingList.string=email,subscribe,unsubscribe
+
+missing.rss.string=url
+
+missing.tweet.string=tweet
 
 missing.tutorial.string=url
 
@@ -40,6 +44,7 @@ nt_unstructured.name = Folders
 nt_unstructured.value = {1}
 
 
+tweet.name = Twitter name
 version.name = Version	
 version.value = {1}
 group.name = Groups 
