--- a/org.softwareFm.card/.classpath
+++ b/org.softwareFm.card/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" path="src/text/system"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
