--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -38,7 +38,7 @@ detail.factory.loading.text = Loading
 keys.hide = jcr:primaryType,sling:resourceType
 
 #for name 0 is the name 1 is camelCaseToPretty
-#for value 0 is the value 1 is size if it's a list value 2 is 'loading' or the value of the size of the children for things like 'version', 'group', 'mailingList'
+#for value 0 is the value 1 is size if it's a list 
 
 nt_unstructured.name = Folders
 nt_unstructured.value = {1}
