--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -24,6 +24,7 @@ missing.mailingList.string=email,subscribe,unsubscribe
 missing.rss.string=url
 
 missing.tweet.string=tweet
+missing.tweet.default=
 
 missing.tutorial.string=url
 
