--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -18,9 +18,10 @@ missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
 
 missing.artifact.list=mailingList,tutorial,tweet,rss
-missing.artifact.string=name,description
+missing.artifact.string=name,description,issues
 missing.mailingList.string=email,subscribe,unsubscribe
 
+missing.issues.default=<Please add the location of the issues database>
 missing.rss.string=url
 
 missing.tweet.string=tweet
