Split card.properties into card/group/artifact...

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/Card.properties
@@ -1,4 +1,3 @@
-navBar.prev.title = <
 navBar.next.title = >
 
 card.aggregator.tag=sling:resourceType,jcr:primaryType
@@ -6,22 +5,18 @@ card.name.title = Name
 card.value.title = Value
 card.holder.loading.text = Loading
 
-card.order =nt:unstructured,name,description,groupId,artifactId,version,group,version,artifact,email,subscribe,unsubscribe
+card.order =nt:unstructured,name,description,groupId,artifactId,version
 
 editor.styledText = description
 
-missing.list=group,artifact,version,mailingList,tutorial,rss,tweet
-
-missing.group.string=url
 missing.url.default= Unknown
 missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
 
-missing.artifact.list=mailingList,tutorial,tweet,rss
-missing.artifact.string=name,description,issues
+
 missing.mailingList.string=email,subscribe,unsubscribe
 
-missing.issues.default=<Please add the location of the issues database>
+
 missing.rss.string=url
 
 missing.tweet.string=tweet
@@ -45,18 +40,10 @@ keys.hide = jcr:primaryType,sling:resourceType
 nt_unstructured.name = Folders
 nt_unstructured.value = {1}
 
-
 tweet.name = Twitter name
-version.name = Version	
-version.value = {1}
+
 group.name = Groups 
 group.value = {1}
-artifact.name = Artifacts 
-artifact.value = {1}
-mailingList.value={1}
-tutorial.value={1}
-tweet.value={1}
-rss.value={1}
 
 
 button.ok.title = Ok
@@ -66,15 +53,7 @@ button.cancel.title = Cancel
 title.folder.color=255,255,255
 title.folder.indent=15
 
-title.group.color=235,238,235
-title.group.indent=20
 
-title.artifact.color=240,233,235
-title.artifact.indent=25
 
-title.version.color=235,242,246
-title.version.indent=30
 
-title.jar.color=244,239,236
-title.jar.indent = 35
 
