--- a/org.softwareFm.card/bin/org/softwareFm/card/api/group.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/group.properties
@@ -1,3 +1,8 @@
+card.color=243,232,252
+card.title.indent=20
+card.title.icon=artifact.group
+card.title.navIcon=title.group
+
 card.order =name,description
 
 editor.styledText = description
@@ -8,6 +13,4 @@ missing.group.list=artifact
 artifact.name = Artifacts
 artifact.value = {1}
 
-title.group.color=235,238,235
-title.group.indent=20
 
