--- a/org.softwareFm.card/bin/org/softwareFm/card/api/jar.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/jar.properties
@@ -1,3 +1,4 @@
-
-title.jar.color=244,239,236
-title.jar.indent = 35
+card.color=236,248,252
+card.title.indent=35
+card.title.icon=artifact.jar
+card.title.navIcon=title.jar
