--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -9,6 +9,10 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version
 
 editor.styledText = description
 
+menuitem.add.collection = Add {0}
+menuitem.add.artifact = Add new artifact
+
+
 missing.url.default= Unknown
 missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
@@ -49,9 +53,9 @@ group.value = {1}
 button.ok.title = Ok
 button.cancel.title = Cancel
 
-
-title.folder.color=255,255,255
-title.folder.indent=15
+card.color=255,255,255
+card.title.indent=15
+card.title.icon=title.folder
 
 
 
