--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/artifact.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/artifact.properties
@@ -1,3 +1,8 @@
+card.color=235,234,252
+card.title.indent=25
+card.title.icon=artifact.artifact
+card.title.navIcon=title.artifact
+
 card.order =name,description
 
 editor.styledText = description
@@ -14,6 +19,4 @@ tutorial.value={1}
 tweet.value={1}
 rss.value={1}
 
-title.artifact.color=240,233,235
-title.artifact.indent=25
 
