--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/version.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/version.properties
@@ -1,3 +1,7 @@
+card.color=235,242,246
+card.title.indent=30
+card.title.icon=artifact.jar
+card.title.navIcon=title.jar
 card.order =name,description
 
 editor.styledText = description
@@ -8,7 +12,5 @@ missing.group.list=artifact
 artifact.name = Artifacts
 artifact.value = {1}
 
-title.version.color=235,242,246
-title.version.indent=30
 
 
