Adding new artifacts now easier

--- a/org.softwareFm.card/bin/org/softwareFm/card/api/artifact.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/artifact.properties
@@ -3,12 +3,12 @@ card.title.indent=25
 card.title.icon=artifact.artifact
 card.title.navIcon=title.artifact
 
-card.order =name,description
+card.order =description
 
 editor.styledText = description
 
 missing.artifact.list=mailingList,tutorial,tweet,rss,version
-missing.artifact.string=name,description,issues
+missing.artifact.string=description,issues
 
 missing.issues.default=<Please add the location of the issues database>
 
