--- a/org.softwareFm.card/bin/org/softwareFm/card/api/group.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/group.properties
@@ -7,8 +7,8 @@ card.order =name,description
 
 editor.styledText = description
 
-missing.group.string=url
-missing.group.list=artifact
+card.missing.string=url
+card.missing.list=artifact
 
 artifact.name = Artifacts
 artifact.value = {1}
