--- a/org.softwareFm.card/bin/org/softwareFm/card/api/version.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/version.properties
@@ -6,11 +6,7 @@ card.order =name,description
 
 editor.styledText = description
 
-missing.group.string=url
-missing.group.list=artifact
-
-artifact.name = Artifacts
-artifact.value = {1}
+digest.value = {1}
 
 
 
