--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -15,7 +15,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.jar" sourcepath="C:/Users/Phil/.m2/repository/com/googlecode/json-simple/json-simple/1.1/json-simple-1.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-asm-3.0.5.RELEASE.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring-core-3.0.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-core-3.0.5.RELEASE.jar" sourcepath="C:/Users/Phil/.m2/repository/org/springframework/spring-core/3.0.5.RELEASE/spring-core-3.0.5.RELEASE-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/twitter4j-core-2.2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
