--- a/org.softwareFm.card/build.properties
+++ b/org.softwareFm.card/build.properties
@@ -1,6 +1,7 @@
 source.. = src/main/java/,\
            src/main/resources/,\
-           src/test/java/
+           src/test/java/,\
+           src/test/system/
 output.. = bin/
 bin.includes = META-INF/,\
                .
