--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/artifact.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/artifact.properties
@@ -3,15 +3,17 @@ card.title.indent=25
 card.title.icon=artifact.artifact
 card.title.navIcon=title.artifact
 
-card.order =description
+card.order =description,issues,version,mailingList,tutorial,tweet,rss,blog,facebook
 
 editor.styledText = description
 
-missing.artifact.list=mailingList,tutorial,tweet,rss,version
-missing.artifact.string=description,issues
+card.missing.list=mailingList,tutorial,tweet,rss,version,blog,facebook
+card.missing.string=description,issues
 
 missing.issues.default=<Please add the location of the issues database>
 
+blog.value={1}
+facebook.value={1}
 version.value = {1}
 artifact.value = {1}
 mailingList.value={1}
