--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/mailingList.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/mailingList.properties
@@ -2,5 +2,9 @@ card.color=224,239,226
 card.title.indent=30
 card.title.icon=artifact.mailingList
 
-title.mailingList.color=224,239,226
-title.mailingList.indent = 30
+card.missing.string=email,subscribe,unsubscribe
+
+missing.email.default = Add email
+missing.subscribe.default = Add email address used to subscribe
+missing.unsubscribe.default = Add email address used to unsubscribe 
+
