--- a/org.softwareFm.card/bin/org/softwareFm/card/api/tweet.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/tweet.properties
@@ -2,6 +2,9 @@ card.color=228,240,243
 card.title.indent=30
 card.title.icon=artifact.twitter
 
+card.auto.url={0}
+card.auto.name=keyword
+
 card.missing.string=tweet
 missing.tweet.default=
 
