--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/facebook.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/facebook.properties
@@ -2,4 +2,7 @@ card.color=216.236.253
 card.title.indent=30
 card.title.icon=artifact.faceBook
 
-card.missing.string=url
+card.auto.url={0}
+card.auto.name=group
+
+card.missing.string=group
