--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/facebook.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/facebook.properties
@@ -2,7 +2,7 @@ card.color=216.236.253
 card.title.indent=30
 card.title.icon=artifact.faceBook
 
-card.auto.url={0}
-card.auto.name=group
+card.name.url={0}
+card.name.field=group
 
 card.missing.string=group
