--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/rss.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/rss.properties
@@ -2,7 +2,7 @@ card.color=240,227,218
 card.title.indent=30
 card.title.icon=artifact.rss
 
-card.auto.url={1}
-card.auto.name=url
+card.name.url={1}
+card.name.field=url
 
 card.missing.string=url
