--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/tutorial.properties
@@ -2,7 +2,7 @@ card.color=242,235,222
 card.title.indent=30
 card.title.icon=artifact.tutorial
 
-card.auto.url={1}
-card.auto.name=url
+card.name.url={1}
+card.name.field=url
 
 card.missing.string=url
