--- a/org.softwareFm.card/bin/org/softwareFm/card/api/rss.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/rss.properties
@@ -5,4 +5,8 @@ card.title.icon=artifact.rss
 card.name.url={1}
 card.name.field=url
 
-card.missing.string=url
+card.missing.string=url,description
+
+help.rss.url=This is the 'rss feed url'
+help.rss.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
+\n\nThe description will often be cut and pasted from the website hosting the rss feed
