--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -2,7 +2,7 @@ navBar.next.title = >
 
 #When a new card is created using the gui, the last segment of the url for the card is determined by this. It can be overridden (see rss.properties for example)
 #0 is the url-ified part of the name entered by the user, 1 is a uuid
-card.auto.url={0}
+card.name.url={0}
 
 card.aggregator.tag=sling:resourceType,jcr:primaryType
 card.name.title = Name
