--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/tutorial.properties
@@ -5,4 +5,9 @@ card.title.icon=artifact.tutorial
 card.name.url={1}
 card.name.field=url
 
-card.missing.string=url
+card.order =url,description
+card.missing.string=url,description
+
+help.tutorial.url=This is the url for the tutorial
+help.tutorial.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
+\n\nThe description should describe the purpose of the tutorial 
