--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/group.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/group.properties
@@ -6,6 +6,7 @@ card.title.navIcon=title.group
 card.order =name,url,description
 
 editor.styledText = description
+canedit.grpi[
 
 card.missing.string=url,description
 card.missing.list=artifact
