--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -11,6 +11,8 @@ card.holder.loading.text = Loading
 
 card.order =nt:unstructured,name,description,groupId,artifactId,version
 
+editor.description=styledText
+
 editor.styledText = description
 
 menuitem.add.collection = Add {0}
