--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/group.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/group.properties
@@ -3,10 +3,9 @@ card.title.indent=20
 card.title.icon=artifact.group
 card.title.navIcon=title.group
 
-card.order =name,url,description
+card.order =groupId,name,url,description
 
-editor.styledText = description
-canedit.grpi[
+editor.groupId=none
 
 card.missing.string=url,description
 card.missing.list=artifact
