--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/version.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/version.properties
@@ -2,10 +2,17 @@ card.color=235,242,246
 card.title.indent=30
 card.title.icon=artifact.jar
 card.title.navIcon=title.jar
-card.order=name,description
 
-editor.styledText = description
+card.order=groupId,artifactId,version,digest
 
+card.missing.string=groupId,version,artifactId
+card.missing.list=digest
+
+editor.groupId=none
+editor.artifactId=none
+editor.version=none
+
+digest.name=Digests
 digest.value = {1}
 
 
