--- a/org.softwareFm.card/bin/org/softwareFm/card/api/artifact.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/api/artifact.properties
@@ -7,10 +7,11 @@ card.name.field=name
 
 card.order =name,description,issues,version,mailingList,tutorial,tweet,rss,blog,facebook
 
-editor.styledText = description
 
 card.missing.list=mailingList,tutorial,tweet,rss,version,blog,facebook
 card.missing.string=description,issues
+
+editor.issues=url
 
 tutorial.name=Tutorials
 
@@ -36,5 +37,4 @@ help.artifact.blog=Above you see all the known blogs for this artifact\
 \n\nTo add a new one right click on the word 'Blog' in the left pane, and select 'add blog'. This will prompt you for the blog url
 help.artifact.facebook=Above you see all the known facebook pages for this artifact\
 \n\nTo add a new one right click on the word 'Facebook' in the left pane, and select 'add facebook'. This will prompt you for the facebook url
-
 
