--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/api/Card.properties
@@ -12,8 +12,8 @@ card.holder.loading.text = Loading
 card.order =nt:unstructured,name,description,groupId,artifactId,version
 
 editor.description=styledText
+editor.url=url
 
-editor.styledText = description
 
 menuitem.add.collection = Add {0}
 menuitem.add.artifact = Add new artifact
@@ -42,6 +42,7 @@ group.value = {1}
 
 button.ok.title = Ok
 button.cancel.title = Cancel
+button.test.title = Test
 
 card.color=255,255,255
 card.title.indent=15
