card.internal tests and refactorings

--- a/org.softwareFm.card/build.properties
+++ b/org.softwareFm.card/build.properties
@@ -1,7 +1,8 @@
 source.. = src/main/java/,\
            src/main/resources/,\
            src/test/java/,\
-           src/test/system/
+           src/test/system/,\
+           src/underdev/java/
 output.. = bin/
 bin.includes = META-INF/,\
                .
