--- a/org.softwareFm.card/.classpath
+++ b/org.softwareFm.card/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="src" path="src/test/system"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" path="src/underdev/java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
