more issue-2 made it so that when you look at a collection, the names are correct

--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/group.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/group.properties
@@ -3,8 +3,9 @@ card.title.indent=20
 card.title.icon=artifact.group
 card.title.navIcon=title.group
 
-card.order =groupId,name,url,description
+card.name.field=groupId
 
+card.order =groupId,name,url,description
 editor.groupId=none
 
 card.missing.string=url,description
