--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -4,6 +4,7 @@ navBar.next.title = >
 #0 is the url-ified part of the name entered by the user, 1 is a uuid
 #Naming convention: When using {1} the card is a member of a nameless list, when {0} a member of a named list
 card.name.url={0}
+card.content.menu= View actual {0} 
 
 card.aggregator.tag=sling:resourceType,jcr:primaryType
 card.name.title = Name
