--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
@@ -4,6 +4,8 @@ card.title.icon=artifact.tutorial
 
 card.name.url={1}
 card.name.field=url
+card.detail.url=url
+card.content.field=url
 
 card.order =url,description
 card.missing.string=url,description
