the rss / tutorial / blogs now have view contents.

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/blog.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/blog.properties
@@ -4,3 +4,7 @@ card.title.icon=artifact.blog
 
 card.name.url={1}
 card.name.field=url
+
+#This specifies what happens when "view action ..." is specified. 
+card.content.field=url
+card.content.feedType=feedType.browser
