--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/rss.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/rss.properties
@@ -5,6 +5,10 @@ card.title.icon=artifact.rss
 card.name.url={1}
 card.name.field=url
 
+#This specifies what happens when "view action ..." is specified. 
+card.content.field=url
+card.content.feedType=feedType.rss
+
 card.missing.string=url,description
 
 help.rss.url=This is the 'rss feed url'
