--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
@@ -4,8 +4,10 @@ card.title.icon=artifact.tutorial
 
 card.name.url={1}
 card.name.field=url
-card.detail.url=url
+
+#This specifies what happens when "view action ..." is specified. 
 card.content.field=url
+card.content.feedType=feedType.browser
 
 card.order =url,description
 card.missing.string=url,description
