--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
@@ -9,7 +9,7 @@ card.order =name,description,issues,version,mailingList,tutorial,tweet,rss,blog,
 
 
 card.missing.list=mailingList,tutorial,tweet,rss,version,blog,facebook
-card.missing.string=description,issues
+card.missing.string=name,description,issues
 
 editor.issues=url
 
