--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -37,6 +37,23 @@ button.ok.title = Ok
 button.cancel.title = Cancel
 button.test.title = Test
 
+#base images
+rss.image=artifact.rss
+tutorial.image=artifact.tutorials
+blog.image=artifact.blog
+mailingList.image=artifact.mailingList
+tweet.image=artifact.twitter
+issues.image=artifact.issues
+facebook.image=artifact.faceBook
+version.image=artifact.jar
+nt_unstructured.image=artifact.folder
+url.image=general.browse
+group.image=artifact.group
+groupId.image=artifact.group
+artifact.image=artifact.artifact
+artifactId.image=artifact.artifact
+digest.image=artifact.jar
+
 card.color=255,255,255
 card.title.indent=15
 card.title.icon=title.folder
