--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tweet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tweet.properties
@@ -3,8 +3,11 @@ card.title.indent=30
 card.title.icon=artifact.twitter
 
 card.name.url={0}
-card.name.field=keyword
+card.name.field=tweet
 
+#This specifies what happens when "view action ..." is specified. 
+card.content.field=tweet
+card.content.feedType=feedType.tweet
 
 help.tweet.keyword=This is the tweet keyword (without the @) 
 
