Web Page configuration: welcome and unrecognised jar

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -59,6 +59,10 @@ card.title.indent=15
 card.title.icon=title.folder
 
 
+webpage.welcome.url=http://www.softwarefm.com/eclipse/welcome.html
+webpage.unknownJar.url=http://www.softwarefm.com/eclipse/unknownJar.html
+
+
 
 
 
