--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -18,6 +18,7 @@ editor.url=url
 menuitem.view.actual= View actual {0}s 
 menuitem.add.collection = Add {0}
 menuitem.add.artifact = Add new artifact
+menuitem.add.snippet = Add new snippet
 
 #defaults used by several card types
 missing.url.default= Unknown
